--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             style="width: 100%; height: auto"
           />
         </div>
+        <div>
+          <p id="feedbackParagraph">Feedback</p>
+        </div>
       </div>
     </main>
 
